ncc/testsuite/negative/return-type.n
class M {
  static g () : string { 3 }    // E: function return type was declared to be
  static h () : void { ().x = 4 }    // E: type `void' was expected to be class
}
class A { public this () {} }

class B {
  f1 () : void { null } // E: function return type was declared to be

  static f<'a> (_ : 'a) : 'a where 'a : A { A() }        // E: function return.*
}

class X {
  static f () : void { 
    def g () : int { () }; // E: function return type was declared to be.*
    def h () : int {  }; // E: function return type was declared to be.*
    def _ = g () + h ();
    () 
  }
}
